✨ also backup this stack conf

--- a/backup/.env_templpate
+++ b/backup/.env_templpate
@@ -1,9 +1,12 @@
 
 RCLONE_CONFIGURATION_NAME=pcloud-bkp
 PCLOUD_REPO=restic-backup
+PCLOUD_STACK_REPO=restic-stack-conf-backup
+
 IMAGE_VERSION=1.7.2
 
-HOST_SOURCE_BACKUP=/PATH_TO_SAVE
+HOST_SOURCE_BACKUP=/VOLUMES_PATH_TO_SAVE
+HOST_STACK_CONF_PATH=./../
 
 RESTIC_PASSWORD=""
 
