--- a/playbooks/roles/02_monitoring/templates/prometheus.yml
+++ b/playbooks/roles/02_monitoring/templates/prometheus.yml
@@ -12,11 +12,11 @@ scrape_configs:
       - targets: ["node-exporter:9100"]
 
   - job_name: cadvisor
-    scrape_interval: 5s
+    scrape_interval: 1m
     static_configs:
       - targets: ["cadvisor:8080"]
 
   - job_name: traefik
-    scrape_interval: 5s
+    scrape_interval: 10s
     static_configs:
       - targets: ["traefik:8080"]
