--- a/playbooks/roles/04_nextcloud/templates/docker-compose.yml
+++ b/playbooks/roles/04_nextcloud/templates/docker-compose.yml
@@ -31,30 +31,31 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=nextcloud
       - POSTGRES_USER=nextcloud
+      - REDIS_HOST=${REDIS_HOST}
       - NEXTCLOUD_TRUSTED_DOMAINS=$DOMAIN
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextcloud.rule=Host(`nextcloud.${DOMAIN}`)"
+      - "traefik.http.routers.nextcloud.rule=Host(`{{nexcloud_sub_domain}}.${DOMAIN}`)"
       - "traefik.http.routers.nextcloud.entrypoints=websecure"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
       - "traefik.http.routers.nextcloud.tls=true"
       - "traefik.http.routers.nextcloud.tls.certresolver=letsencrypt"
 
-  onlyoffice-documentserver:
-    image: onlyoffice/documentserver:8.1.3
-    restart: always
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.onlyoffice.rule=Host(`onlyoffice-${DOMAIN}`)"
-      - "traefik.http.routers.onlyoffice.entrypoints=websecure"
-      - "traefik.http.services.onlyoffice.loadbalancer.server.port=80"
-      - "traefik.http.routers.onlyoffice.tls=true"
-      - "traefik.http.routers.onlyoffice.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.onlyoffice.middlewares=onlyoffice-headers"
-      ## Middleware definition
-      # Headers for onlyoffice, https://github.com/ONLYOFFICE/onlyoffice-nextcloud/issues/151
-      - "traefik.http.middlewares.onlyoffice-headers.headers.customrequestheaders.X-Forwarded-Proto=https"
-      - "traefik.http.middlewares.onlyoffice-headers.headers.accesscontrolalloworiginlist=*"
+  # onlyoffice-documentserver:
+  #   image: onlyoffice/documentserver:8.1.3
+  #   restart: always
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - "traefik.http.routers.onlyoffice.rule=Host(`onlyoffice-${DOMAIN}`)"
+  #     - "traefik.http.routers.onlyoffice.entrypoints=websecure"
+  #     - "traefik.http.services.onlyoffice.loadbalancer.server.port=80"
+  #     - "traefik.http.routers.onlyoffice.tls=true"
+  #     - "traefik.http.routers.onlyoffice.tls.certresolver=letsencrypt"
+  #     - "traefik.http.routers.onlyoffice.middlewares=onlyoffice-headers"
+  #     ## Middleware definition
+  #     # Headers for onlyoffice, https://github.com/ONLYOFFICE/onlyoffice-nextcloud/issues/151
+  #     - "traefik.http.middlewares.onlyoffice-headers.headers.customrequestheaders.X-Forwarded-Proto=https"
+  #     - "traefik.http.middlewares.onlyoffice-headers.headers.accesscontrolalloworiginlist=*"
 
 volumes:
   nextcloud-2024:
