--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -7,3 +7,5 @@ nexcloud_sub_domain: nextcloud
 wireguard_sub_domain: wireguard
 messaging_sub_domain: im
 element_sub_domain: element
+registry_sub_domain: registry
+registry_ui_sub_domain: registry-ui
