✨ add a video stream service

--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -2,6 +2,7 @@
 app_path: /srv
 traefik_network: traefik_net
 domain: ad2ien.dev
+org_name: ad2ien
 
 nexcloud_sub_domain: nextcloud
 wireguard_sub_domain: wireguard
