--- a/playbooks/group_vars/private.yml.template
+++ b/playbooks/group_vars/private.yml.template
@@ -19,3 +19,7 @@ redirection_url:
 
 mediamtx_user: 
 mediamtx_password:
+
+frps_auth_token:
+# echo $(htpasswd -nB user) | sed -e s/\\$/\\$\\$/g
+frps_basic_auth:
