--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -10,3 +10,7 @@ messaging_sub_domain: im
 element_sub_domain: element
 registry_sub_domain: registry
 registry_ui_sub_domain: registry-ui
+
+frps_port: 7007
+vhost_frps_port: 7080
+frps_subdomain: android1
