--- a/playbooks/group_vars/private.yml.template
+++ b/playbooks/group_vars/private.yml.template
@@ -23,3 +23,6 @@ mediamtx_password:
 frps_auth_token:
 # echo $(htpasswd -nB user) | sed -e s/\\$/\\$\\$/g
 frps_basic_auth:
+
+static_files_sub_domain:
+standard_basic_auth:
