--- a/playbooks/roles/02_monitoring/templates/promtail-config.yml
+++ b/playbooks/roles/02_monitoring/templates/promtail-config.yml
@@ -30,3 +30,11 @@ scrape_configs:
         labels:
           job: varlogs
           __path__: /var/log/*log
+
+  - job_name: traefik
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: traefik
+          __path__: /var/log/traefik/traefik.log
