--- a/playbooks/roles/05_nextcloud/templates/docker-compose.yml
+++ b/playbooks/roles/05_nextcloud/templates/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - .env
 
   app:
-    image: nextcloud:30.0.6
+    image: nextcloud:31.0.6
     restart: unless-stopped
     links:
       - db-pg
@@ -48,7 +48,7 @@ services:
 
   # onlyoffice-documentserver:
   #   image: onlyoffice/documentserver:8.1.3
-  #   restart: always
+  #   restart: unless-stopped
   #   labels:
   #     - "traefik.enable=true"
   #     - "traefik.http.routers.onlyoffice.rule=Host(`onlyoffice-${DOMAIN}`)"
