⬆️ bump docker images
🐛 fix nextcloud talk
🩹 badge link

--- a/playbooks/full-install.yml
+++ b/playbooks/full-install.yml
@@ -24,10 +24,10 @@
       tags: messaging
     - role: 09_redirect
       tags: redirect
-    - role: 10_video-server
-      tags: mediamtx
-    - role: 11_frp
-      tags: frp
+    # - role: 10_video-server
+    #   tags: mediamtx
+    # - role: 11_frp
+    #   tags: frp
     - role: 12_static-files
       tags: static-files
     - role: 13_help-the-stars
