--- a/playbooks/roles/06_wireguard/templates/docker-compose.yml
+++ b/playbooks/roles/06_wireguard/templates/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   wireguard:
-    image: lscr.io/linuxserver/wireguard:1.0.20210914-r4-ls52
+    image: linuxserver/wireguard:1.0.20250521
     container_name: wireguard
     cap_add:
       - NET_ADMIN
