✨ enable traefik dashboard behind basic auth
✨ redirect http to https

🗑 keep logs in traefic container

--- a/playbooks/roles/01_traefik/templates/docker-compose.yml
+++ b/playbooks/roles/01_traefik/templates/docker-compose.yml
@@ -11,9 +11,17 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - ./acme:/etc/traefik/certs
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
-      - /var/log/traefik/traefik.log:/var/log/traefik/log.txt
     networks:
       - net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.dashboard.rule=Host(`traefik.${DOMAIN}`)"
+      - "traefik.http.routers.dashboard.entrypoints=websecure"
+      - "traefik.http.routers.dashboard.service=api@internal"
+      - "traefik.http.routers.dashboard.tls=true"
+      - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.dashboard.middlewares=authtraefik"
+      - "traefik.http.middlewares.authtraefik.basicauth.users={{standard_basic_auth}}"
 
 networks:
   net:
