--- a/playbooks/roles/10_video-server/templates/mediamtx.yml
+++ b/playbooks/roles/10_video-server/templates/mediamtx.yml
@@ -14,7 +14,7 @@ logDestinations: [stdout]
 logFile: mediamtx.log
 
 # Timeout of read operations.
-readTimeout: 10s
+readTimeout: 20s
 # Timeout of write operations.
 writeTimeout: 10s
 # Size of the queue of outgoing packets.
@@ -51,9 +51,9 @@ authMethod: internal
 authInternalUsers:
   # Default unprivileged user.
   # Username. 'any' means any user, including anonymous ones.
-  - user: {{mediamtx_user}}
+  - user: { { mediamtx_user } }
     # Password. Not used in case of 'any' user.
-    pass: {{mediamtx_password}}
+    pass: { { mediamtx_password } }
     # IPs or networks allowed to use this user. An empty list means any IP.
     ips: []
     # List of permissions.
@@ -265,7 +265,7 @@ rtmp: yes
 rtmpAddress: :1935
 # Encrypt connections with TLS (RTMPS).
 # Available values are "no", "strict", "optional".
-rtmpEncryption: "optional"
+rtmpEncryption: "strict"
 # Address of the RTMPS listener. This is needed only when encryption is "strict" or "optional".
 rtmpsAddress: :1936
 # Path to the server key. This is needed only when encryption is "strict" or "optional".
@@ -376,8 +376,7 @@ webrtcAdditionalHosts: []
 # ICE servers. Needed only when local listeners can't be reached by clients.
 # STUN servers allows to obtain and share the public IP of the server.
 # TURN/TURNS servers forces all traffic through them.
-webrtcICEServers2:
-  []
+webrtcICEServers2: []
   # - url: stun:stun.l.google.com:19302
   # if user is "AUTH_SECRET", then authentication is secret based.
   # the secret must be inserted into the password field.
@@ -385,7 +384,7 @@ webrtcICEServers2:
   # password: ''
   # clientOnly: false
 # Time to wait for the WebRTC handshake to complete.
-webrtcHandshakeTimeout: 10s
+webrtcHandshakeTimeout: 20s
 # Maximum time to gather video tracks.
 webrtcTrackGatherTimeout: 2s
 # The maximum time to gather STUN candidates.
@@ -438,7 +437,7 @@ pathDefaults:
   sourceOnDemand: no
   # If sourceOnDemand is "yes", readers will be put on hold until the source is
   # ready or until this amount of time has passed.
-  sourceOnDemandStartTimeout: 10s
+  sourceOnDemandStartTimeout: 20s
   # If sourceOnDemand is "yes", the source will be closed when there are no
   # readers connected and this amount of time has passed.
   sourceOnDemandCloseAfter: 10s
@@ -627,7 +626,7 @@ pathDefaults:
   runOnDemandRestart: no
   # Readers will be put on hold until the runOnDemand command starts publishing
   # or until this amount of time has passed.
-  runOnDemandStartTimeout: 10s
+  runOnDemandStartTimeout: 20s
   # The command will be closed when there are no
   # readers connected and this amount of time has passed.
   runOnDemandCloseAfter: 10s
