⬆️ update help-the-stars config

--- a/playbooks/roles/13_help-the-stars/templates/docker-compose.yml
+++ b/playbooks/roles/13_help-the-stars/templates/docker-compose.yml
@@ -2,11 +2,22 @@ services:
   help-the-stars:
     image: ghcr.io/ad2ien/help-the-stars:latest
     volumes:
-      - ./.env:/app/.env:ro
       - help-the-stars:/app/db
+    command:
+      - "./help-the-stars"
+      - "--gh-token"
+      - "$GITHUB_TOKEN"
+      - "--matrix-server"
+      - "$MATRIX_HOMESERVER"
+      - "--matrix-user"
+      - "$MATRIX_USERNAME"
+      - "--matrix-password"
+      - "$MATRIX_PASSWORD"
+      - "--matrix-room"
+      - "$MATRIX_ROOM_ID"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.help-the-stars.rule=Host(`help-the-stars.${DOMAIN}`)"
+      - "traefik.http.routers.help-the-stars.rule=Host(`{{ help_the_stars_sub_domain }}.${DOMAIN}`)"
       - "traefik.http.routers.help-the-stars.entrypoints=websecure"
       - "traefik.http.services.help-the-stars.loadbalancer.server.port=1983"
       - "traefik.http.routers.help-the-stars.tls.certresolver=letsencrypt"
