--- a/playbooks/roles/13_help-the-stars/templates/.env.template
+++ b/playbooks/roles/13_help-the-stars/templates/.env.template
@@ -2,7 +2,8 @@ TRAEFIK_NETWORK={{ traefik_network }}
 DOMAIN={{ domain }}
 
 GITHUB_TOKEN={{ github_token }}
+
 MATRIX_HOMESERVER={{ matrix_homeserver }}
 MATRIX_USERNAME={{ matrix_username }}
 MATRIX_PASSWORD={{ matrix_password }}
-MATRIX_ROOMID={{ matrix_roomid }}
+MATRIX_ROOM_ID={{ matrix_roomid }}
